@@ -1,3 +1,8 @@
+2024-08-19 Carl A. B. Pearson <carl.ab.pearson@gmail.com>
+
+        * src/digest.c: enable all hashing algorithms to return raw output.
+        * inst/tinytest/test_raw.R: test raw vs not consistency for all algos.
+
 2024-08-15  Kevin Ushey  <kevinushey@gmail.com>
 
 	* src/raes.c: Calloc => R_Calloc; Free => R_Free
